# fut

./: README.md  manage.py  pyproject.toml
TeamFinder/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
