[tool.poetry]
name = "fifa"
version = "0.1.0"
description = ""
authors = ["Nikolai <nicolas.gordienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-bootstrap4 = "^23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
